	  build phase.
	* Added sdcard insert and eject, nsh command '?' and some code remarks
	* Renamed nuttapp to namedapp
	* namedapp/binfs.c -- Create a tiny filesystem that can be used
	  to show the internal named apps under /bin.
	* Numerous fixes to build system required to support building with native
	  Windows toolchain.

6.2 2011-05-06 Gregory Nutt <spudmonkey@racsa.co.cr>

	* apps/examples/nxffs:  Add a test a a configuration that will be used to
	  verify NXFFS.

6.3 2011-05-15 Gregory Nutt <spudmonkey@racsa.co.cr>

    * apps/interpreter: Add a directory to hold interpreters.  The Pascal add-
	  on module now installs and builds under this directory.
	* apps/interpreter/ficl: Added logic to build Ficl (the "Forth Inspired
	  Command Language").  See http://ficl.sourceforge.net/.
	* apps/netutils/dhcpc, dhcpcd, and tftp.  If these directories are included
	  in the configuration but CONFIG_NET_UDP is disable (which is not very wise),
	  then a make error occurs because tools/mkdep.sh is called with no files.
	* system/free: Move Uros' custom free command from vsn/free
	* system/install: Add a new install command submitted by Uros Platise.
	* examples/rgmp.  Add a placeholder for an RGMP build example.
	  RGMP is a project for running GPOS and RTOS simultaneously on
	  multi-processor platforms. See http://rgmp.sourceforge.net/wiki/index.php/Main_Page
	  for further information about RGMP.  NOTE:  This is an empty example
	  on initial check-in.

6.4 2011-06-06 Gregory Nutt <spudmonkey@racsa.co.cr>

	* nshlib/nsh_netcmds.c: If a network device name and IP address are provided
	  with the ifconfig command, then this command will now set the network address.
	  (Contributed by Yu Qiang).
	* netutils/ftpc: A library to support client-side FTP.
	* examples/ftpc: A simple add-on to the NSH.  From NSH, you can start
	  this simple FTP shell to transfer files to/from a remote FTP server.

6.5 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>