@@ -58,3 +58,5 @@
 	  this simple FTP shell to transfer files to/from a remote FTP server.
 
 6.5 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
+
+	* netutils/ftpc:  Simpflication and size reduction.
